[gd_scene load_steps=28 format=3 uid="uid://dqfv664ya6qvf"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_y1usg"]
[ext_resource type="SpriteFrames" uid="uid://cjlrh348xgjwn" path="res://Resources/SpriteFrames/Weapons/knife.tres" id="2_65anr"]
[ext_resource type="SpriteFrames" uid="uid://hqstwm63f6gp" path="res://Resources/SpriteFrames/Weapons/pistol.tres" id="3_ikv47"]
[ext_resource type="Texture2D" uid="uid://bttcwloecl1ih" path="res://Assets/textures/Characters/bjface.png" id="3_lx46n"]
[ext_resource type="Texture2D" uid="uid://0jtydcinoh3x" path="res://Assets/textures/Items/hudknife.png" id="6_x61u0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5p0kk"]
atlas = ExtResource("3_lx46n")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkdff"]
atlas = ExtResource("3_lx46n")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fla1s"]
atlas = ExtResource("3_lx46n")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smjxy"]
atlas = ExtResource("3_lx46n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ked6t"]
atlas = ExtResource("3_lx46n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo178"]
atlas = ExtResource("3_lx46n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f71ly"]
atlas = ExtResource("3_lx46n")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5rd6"]
atlas = ExtResource("3_lx46n")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vopt"]
atlas = ExtResource("3_lx46n")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtvh2"]
atlas = ExtResource("3_lx46n")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yupfp"]
atlas = ExtResource("3_lx46n")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sopwj"]
atlas = ExtResource("3_lx46n")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn05k"]
atlas = ExtResource("3_lx46n")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_st2yy"]
atlas = ExtResource("3_lx46n")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u6vl"]
atlas = ExtResource("3_lx46n")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bela"]
atlas = ExtResource("3_lx46n")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxdtd"]
atlas = ExtResource("3_lx46n")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6enfg"]
atlas = ExtResource("3_lx46n")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j1dv"]
atlas = ExtResource("3_lx46n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7dts"]
atlas = ExtResource("3_lx46n")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgkf3"]
atlas = ExtResource("3_lx46n")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ugjh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p0kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkdff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fla1s")
}],
"loop": true,
"name": &"10",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smjxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ked6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo178")
}],
"loop": true,
"name": &"100",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f71ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5rd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vopt")
}],
"loop": true,
"name": &"25",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtvh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yupfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sopwj")
}],
"loop": true,
"name": &"40",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn05k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st2yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u6vl")
}],
"loop": true,
"name": &"55",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bela")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxdtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6enfg")
}],
"loop": true,
"name": &"70",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j1dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7dts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgkf3")
}],
"loop": true,
"name": &"85",
"speed": 3.0
}]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_y1usg")
weapons = Array[Resource("res://Scripts/weapon.gd")]([ExtResource("2_65anr"), ExtResource("3_ikv47"), null, null])

[node name="WeaponAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(544, 432)
scale = Vector2(6, 6)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -121.0
grow_horizontal = 2
grow_vertical = 0

[node name="Interface" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -121.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0.643137, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.0
offset_top = -60.5
offset_right = 544.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2

[node name="Floor" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2

[node name="FloorLabel" type="Label" parent="Control/HBoxContainer/Floor"]
layout_mode = 2
text = "FLOOR"
horizontal_alignment = 1

[node name="FloorValue" type="Label" parent="Control/HBoxContainer/Floor"]
layout_mode = 2
theme_type_variation = &"LabelNumber"
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Control/HBoxContainer/Score"]
layout_mode = 2
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="Control/HBoxContainer/Score"]
layout_mode = 2
theme_type_variation = &"LabelNumber"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lives" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2

[node name="LivesLabel" type="Label" parent="Control/HBoxContainer/Lives"]
layout_mode = 2
text = "LIVES"
horizontal_alignment = 1

[node name="LivesValue" type="Label" parent="Control/HBoxContainer/Lives"]
layout_mode = 2
theme_type_variation = &"LabelNumber"
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2

[node name="Face" type="AnimatedSprite2D" parent="Control/HBoxContainer/Control"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_ugjh0")
animation = &"100"
autoplay = "100"

[node name="Health" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2

[node name="HealthLabel" type="Label" parent="Control/HBoxContainer/Health"]
layout_mode = 2
text = "HEALTH"
horizontal_alignment = 1

[node name="HealthValue" type="Label" parent="Control/HBoxContainer/Health"]
layout_mode = 2
theme_type_variation = &"LabelNumber"
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ammo" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2

[node name="AmmoLabel" type="Label" parent="Control/HBoxContainer/Ammo"]
layout_mode = 2
text = "AMMO"
horizontal_alignment = 1

[node name="AmmoValue" type="Label" parent="Control/HBoxContainer/Ammo"]
layout_mode = 2
theme_type_variation = &"LabelNumber"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items" type="VBoxContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="WeaponSprite" type="Sprite2D" parent="Control/HBoxContainer/CenterContainer"]
position = Vector2(101, 56)
scale = Vector2(4.20834, 4.20834)
texture = ExtResource("6_x61u0")
